added in the db_name to the load_db cell

--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -91,6 +91,7 @@
    "outputs": [],
    "source": [
     "# Optional: Load in the spDB object\n",
+    "db_name = \"fiqa_test\"\n",
     "db = load_db(db_name)"
    ]
   },
