trained index coverage ratio update is complete, just need to finish the tests

--- a/examples/fastapi_example.ipynb
+++ b/examples/fastapi_example.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,47 @@
     "db_name = \"fast_api_test\"\n",
     "url = \"http://0.0.0.0:8000/db/create\"\n",
     "response = requests.post(url, json={\"name\": db_name})\n",
+    "print (response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'db_info': '{\"name\": \"fast_api_test\", \"vector_dimension\": 768, \"num_vectors\": 149989, \"trained_index_coverage_ratio\": 0.40662315236450675, \"max_memory_usage\": 4294967296, \"n_total\": 149984, \"max_id\": 149999, \"lmdb_uncompressed_vectors_path\": \"/Users/nickmccormick/.spdb/fast_api_test/lmdb/uncompressed_vectors\", \"unassigned_vectors\": {}}'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "db_name = \"fast_api_test\"\n",
+    "url = f\"http://0.0.0.0:8000/db/{db_name}/info\"\n",
+    "response = requests.get(url)\n",
+    "print (response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"message\":\"4 vectors removed successfully\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove a few vectors\n",
+    "ids = [10, 11, 12, 13]\n",
+    "url = f\"http://0.0.0.0:8000/db/{db_name}/remove\"\n",
+    "response = requests.post(url, json={\"ids\": ids})\n",
     "print (response.text)"
    ]
   },
