--- a/examples/fastapi_example.ipynb
+++ b/examples/fastapi_example.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,19 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'db_info': '{\"name\": \"fast_api_test\", \"vector_dimension\": 768, \"num_vectors\": 149989, \"trained_index_coverage_ratio\": 0.40662315236450675, \"max_memory_usage\": 4294967296, \"n_total\": 149984, \"max_id\": 149999, \"lmdb_uncompressed_vectors_path\": \"/Users/nickmccormick/.spdb/fast_api_test/lmdb/uncompressed_vectors\", \"unassigned_vectors\": {}}'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "db_name = \"fast_api_test\"\n",
+    "db_name = \"fiqa_test_1\"\n",
     "url = f\"http://0.0.0.0:8000/db/{db_name}/info\"\n",
     "response = requests.get(url)\n",
     "print (response.json())"
@@ -101,17 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"message\":\"4 vectors removed successfully\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remove a few vectors\n",
     "ids = [10, 11, 12, 13]\n",
@@ -138,12 +122,12 @@
    "outputs": [],
    "source": [
     "# Add the data to the spDB in batches of 100\n",
-    "batch_size = 100\n",
+    "batch_size = 1000\n",
     "data = [(vectors[i], {\"text\": text[i]}) for i in range(len(vectors))]\n",
     "\n",
     "url = f\"http://0.0.0.0:8000/db/{db_name}/add\"\n",
     "\n",
-    "for i in range(0, len(vectors), batch_size):\n",
+    "for i in range(0, 10000, batch_size):\n",
     "    print (i)\n",
     "    add_data = data[i:i+batch_size]\n",
     "    response = requests.post(url, json={\"add_data\": add_data})"
@@ -170,7 +154,7 @@
     "\n",
     "url = f\"http://0.0.0.0:8000/db/{db_name}/train\"\n",
     "response = requests.post(url, json={\n",
-    "    \"use_two_level_clustering\": True,\n",
+    "    \"use_two_level_clustering\": False,\n",
     "    \"pca_dimension\": 256,\n",
     "    \"compressed_vector_bytes\": 32,\n",
     "    \"omit_opq\": True\n",
