just a few little updates

--- a/examples/fastapi_example.ipynb
+++ b/examples/fastapi_example.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,106 @@
     "\n",
     "from spdb.spdb import spDB, load_db\n",
     "import helpers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_key_id = \"cc99b87f866350b89fe9dbdde8db421f\"\n",
+    "api_key_secret = \"VDyOlszmGvWTS8clU9IPyTiVqMlPRTnjUp5cAePGLR0\"\n",
+    "\n",
+    "import requests\n",
+    "import base64\n",
+    "\n",
+    "# Define the token\n",
+    "authToken = base64.b64encode((f\"{api_key_id}:{api_key_secret}\").encode(\"utf-8\")).decode(\"utf-8\")\n",
+    "\n",
+    "# Define the payload and make the query\n",
+    "payload = {\n",
+    "    \"knowledge_base_ids\": [\"cff59808-3184-4d2d-9b09-0ff757402daa\"],\n",
+    "    \"query\": \"What are some financial modeling tools we can build for startups?\",\n",
+    "    \"summarize_results\": True\n",
+    "}\n",
+    "response = requests.post(\n",
+    "    \"https://api.superpowered-qa.com/v1/knowledge_bases/query\",\n",
+    "    headers={\"Authorization\": f\"Bearer {authToken}\"},\n",
+    "    json=payload\n",
+    ")\n",
+    "\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import superpowered\n",
+    "import os\n",
+    "\n",
+    "# Initialize API key and secret\n",
+    "os.environ[\"SUPERPOWERED_API_KEY_ID\"]=\"INSERT_API_KEY_ID_HERE\"\n",
+    "os.environ[\"SUPERPOWERED_API_KEY_SECRET\"]=\"INSERT_API_KEY_SECRET_HERE\"\n",
+    "\n",
+    "# Make the request for the desired chat thread and message\n",
+    "response = superpowered.get_chat_response(\n",
+    "    thread_id=\"a3797a86-427a-4e72-969c-704efaa22f80\",\n",
+    "    input=\"What are some good resources to help find trail conditions?\",\n",
+    ")\n",
+    "\n",
+    "# Print the response\n",
+    "print (response[\"interaction\"][\"model_response\"][\"content\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are several resources you can use to find trail conditions:\n",
+      "\n",
+      "1. Local Hiking Websites: Many regions have dedicated hiking websites or forums where hikers share information about trail conditions. These websites often have up-to-date reports from fellow hikers who have recently visited the trails.\n",
+      "\n",
+      "2. National Park or Forest Websites: If you're planning to hike in a national park or forest, their official websites usually provide information on trail conditions. They may have trail status updates, closures, or alerts due to weather, maintenance, or wildlife activity.\n",
+      "\n",
+      "3. Trail Apps: There are numerous trail apps available for smartphones that provide information on trail conditions. These apps often include user-generated reports, trail maps, and other helpful features. Some popular trail apps include AllTrails, Hiking Project, and Gaia GPS.\n",
+      "\n",
+      "4. Social Media: Following local hiking groups or organizations on social media platforms like Facebook or Instagram can be a great way to stay updated on trail conditions. These groups often share real-time information and photos from hikers who have recently visited the trails.\n",
+      "\n",
+      "5. Visitor Centers or Ranger Stations: If you're hiking in a popular area with visitor centers or ranger stations, they can be a valuable resource for obtaining trail condition information. The staff can provide you with the most current information and any necessary permits or restrictions.\n",
+      "\n",
+      "Remember, trail conditions can change rapidly due to weather, seasonal variations, or other factors. It's always a good idea to check multiple sources and be prepared for any potential challenges or hazards on the trail.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import base64\n",
+    "\n",
+    "# Define the token\n",
+    "api_key_id=\"INSERT_API_KEY_ID_HERE\"\n",
+    "api_key_secret=\"INSERT_API_KEY_SECRET_HERE\"\n",
+    "authToken = base64.b64encode((f\"{api_key_id}:{api_key_secret}\").encode(\"utf-8\")).decode(\"utf-8\")\n",
+    "\n",
+    "# Define the payload and make the query\n",
+    "payload = {\n",
+    "    \"input\": \"What are some good resources to help find trail conditions?\",\n",
+    "}\n",
+    "response = requests.post(\n",
+    "    \"https://api.superpowered-qa.com/v1/chat/threads/a3797a86-427a-4e72-969c-704efaa22f80/get_response\",\n",
+    "    headers={\"Authorization\": f\"Bearer {authToken}\"},\n",
+    "    json=payload\n",
+    ")\n",
+    "\n",
+    "print(response.json()[\"interaction\"][\"model_response\"][\"content\"])\n"
    ]
   },
   {
