new cache tests, and fixes to make the caching fully functional

--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -106,9 +106,9 @@
      "output_type": "stream",
      "text": [
       "30000\n",
-      "<faiss.swigfaiss_avx2.IndexPreTransform; proxy of <Swig Object of type 'faiss::IndexPreTransform *' at 0x7fe0f8aab1b0> >\n",
+      "<faiss.swigfaiss_avx2.IndexPreTransform; proxy of <Swig Object of type 'faiss::IndexPreTransform *' at 0x7fe0f8a7de10> >\n",
       "1576.8234666666667\n",
-      "Fitted parameters: C = 4219994.86512343, b = 39.51947796057294\n"
+      "Fitted parameters: C = 4148950.9998511747, b = 71.8946500005724\n"
      ]
     }
    ],
@@ -129,20 +129,20 @@
     "#memory_per_vector = np.array([142.1, 106.2, 89.1, 83.4, 78.84])\n",
     "\n",
     "#PQ32\n",
-    "vectors = np.array([60000, 120000, 180000, 240000, 360000, 600000])\n",
-    "memory_per_vector = np.array([110.1, 74.2, 62.8, 57.1, 51.4, 46.8])\n",
+    "#vectors = np.array([60000, 120000, 180000, 240000, 360000, 600000])\n",
+    "#memory_per_vector = np.array([110.1, 74.2, 62.8, 57.1, 51.4, 46.8])\n",
     "\n",
     "#PQ128\n",
     "#vectors = np.array([60000, 120000, 180000, 240000, 360000, 600000])\n",
     "#memory_per_vector = np.array([206.1, 170.2, 158.8, 153.1, 147.4, 142.8])\n",
     "\n",
     "vectors = np.array([60000, 120000, 180000, 240000, 360000, 600000])\n",
-    "memory_per_vector = np.array([8525840, 12744704, 17064704, 21384704, 30024704, 47304704])\n",
+    "memory = np.array([8525840, 12744704, 17064704, 21384704, 30024704, 47304704])\n",
     "\n",
     "def model(n, C, b):\n",
-    "    return C / n + b\n",
+    "    return C + (n * b)\n",
     "\n",
-    "params, params_covariance = curve_fit(model, vectors, memory_per_vector)\n",
+    "params, params_covariance = curve_fit(model, vectors, memory)\n",
     "\n",
     "C, b = params\n",
     "print(f\"Fitted parameters: C = {C}, b = {b}\")"
